--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,12 +1,13 @@
-export(dcast, acast)
+export(acast)
+export(add_margins)
+export(colsplit)
+export(dcast)
+export(melt)
+export(recast)
 import(plyr)
 import(stringr)
-export(colsplit)
-export(add_margins)
-export(melt)
-S3method(melt, default)
-S3method(melt, list)
-S3method(melt, data.frame)
-S3method(melt, matrix)
-S3method(melt, array)
-export(recast)
+S3method(melt,array)
+S3method(melt,data.frame)
+S3method(melt,default)
+S3method(melt,list)
+S3method(melt,matrix)
