--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: reshape2
 Type: Package
 Title: Flexibly reshape data: a reboot of the reshape package.
-Version: 1.1
+Version: 1.2
 Author: Hadley Wickham <hadley@rice.edu>
 Maintainer: Hadley Wickham <hadley@rice.edu>
-Description: Reshape lets you flexibly restructure and aggregate data
-        using just two functions: melt and cast.
+Description: Reshape lets you flexibly restructure and
+    aggregate data using just two functions: melt and cast.
 URL: http://had.co.nz/reshape
-Imports: plyr (>= 1.2), stringr, lattice
+Imports: plyr (>= 1.5), stringr, lattice
 Suggests: testthat
 License: MIT
 LazyData: true
 Collate: 'cast.r' 'data.r' 'formula.r' 'helper-colsplit.r'
         'helper-guess-value.r' 'helper-margins.r' 'melt.r' 'recast.r'
         'utils.r'
-Packaged: 2010-12-28 17:56:56 UTC; hadley
+Packaged: 2011-11-18 14:25:48 UTC; hadley
 Repository: CRAN
-Date/Publication: 2011-01-04 07:39:37
+Date/Publication: 2011-11-18 14:46:26
